--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 .layout-grid {
   display: grid;
-  grid-template-columns: 25% 75%;
+  grid-template-columns: 15% 1fr;
+  width: 100%;
+  height: 100vh;
 }
