--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,24 @@
 .layout-grid {
   display: grid;
-  grid-template-columns: 15% 1fr;
+  grid-template-columns: 7.5% 1fr;
   width: 100%;
   height: 100vh;
+}
+
+nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
+
+.link-icon {
+  padding: 25px;
+  font-size: 10px;
+  border-radius: 50%;
+  background-color: #ffdbfd;
+  color: #d126a1;
+  margin: 15px 0;
 }
