--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .layout-grid {
   display: grid;
-  grid-template-columns: 7.5% 1fr;
+  grid-template-columns: 10% 1fr;
   width: 100%;
   height: 100vh;
 }
@@ -33,8 +33,9 @@ nav {
 }
 
 .search-field {
-  border-radius: 20%;
   width: 20%;
+  background-color: white;
+  border-radius: 20px;
 }
 
 .search-field:focus-within,
@@ -44,4 +45,39 @@ nav {
 
 .search-field fieldset {
   border-radius: 20px;
+}
+
+.post {
+  width: 300px;
+  height: auto;
+  border-radius: 10px;
+  background-color: white;
+  padding-bottom: 10px;
+}
+
+.post h3 {
+  margin: 2.5px 0;
+  margin-left: 5px;
+}
+
+.post img {
+  width: 100%;
+}
+
+.post p {
+  padding: 10px;
+  margin: 0;
+}
+
+.post .stats {
+  display: flex;
+  justify-content: space-between;
+  margin: 5px 0;
+}
+
+.post .stats span {
+  margin: 0 20px;
+  display: flex;
+  align-items: center;
+  justify-items: space-between;
 }
