Created login and signup pages.

--- a/src/App.css
+++ b/src/App.css
@@ -196,3 +196,36 @@ div.small-avatar {
 .comment + ul {
   margin-bottom: 30px;
 }
+
+.account-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 100px;
+  width: 92.5%
+}
+
+.account-form > div {
+  width: 40%;
+  margin: 20px 0;
+}
+
+.account-form > span {
+  display: inline-block;
+  width: 40%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.account-form > input {
+  all: unset;
+  cursor: pointer;
+}
+
+.account-form > input:hover {
+  transform: scale(1.1, 1.1);
+}
+
+.account-form > p {
+  font-size: 13px;
+}
