--- a/src/App.css
+++ b/src/App.css
@@ -217,12 +217,14 @@ div.small-avatar {
   justify-content: space-between;
 }
 
-.account-form > input {
+.account-form > input,
+.post-form > input {
   all: unset;
   cursor: pointer;
 }
 
-.account-form > input:hover {
+.account-form > input:hover,
+.post-form > input:hover {
   transform: scale(1.1, 1.1);
 }
 
@@ -252,4 +254,15 @@ button.logout:hover {
 
 .logout .MuiSvgIcon-root {
   font-size: 30px;
+}
+
+.post-form {
+  margin: 0 auto;
+  margin-top: 100px;
+  text-align: center;
+  width: 95%;
+}
+
+.post-form > div {
+  margin-bottom: 20px;
 }
