--- a/src/App.css
+++ b/src/App.css
@@ -63,12 +63,11 @@ nav {
 
 .post {
   display: inline-block;
-  width: 275px;
+  width: 325px;
   height: auto;
   border-radius: 10px;
   background-color: white;
-  padding-bottom: 10px;
-  margin: 10px;
+  margin: 30px 10px;
 }
 
 .post h3 {
@@ -100,7 +99,11 @@ nav {
 
 .post-list {
   padding-top: 100px;
-  display: flex;
+  text-align: center;
+}
+
+.post-list > * {
+  flex-shrink: 0;
 }
 
 div.small-avatar {
