--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
   width: 100%;
   height: 100%;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 nav {
@@ -58,16 +59,13 @@ nav {
   display: inline-block;
   color: black;
   text-decoration: none;
-  height: 100px;
 }
 
 .post {
   display: inline-block;
-  width: 325px;
   height: auto;
   border-radius: 10px;
   background-color: white;
-  margin: 30px 10px;
 }
 
 .post h3 {
@@ -99,11 +97,13 @@ nav {
 
 .post-list {
   padding-top: 100px;
-  text-align: center;
-}
-
-.post-list > * {
-  flex-shrink: 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  overflow: hidden;
+  grid-gap: 20px;
+  width: 90%;
+  margin: 0 auto;
+  margin-bottom: 100px;
 }
 
 div.small-avatar {
