--- a/src/App.css
+++ b/src/App.css
@@ -419,3 +419,23 @@ div.preview {
 .settings-page form {
   margin-bottom: 100px;
 }
+
+.search-page .search-type {
+  display: flex;
+  margin: 0 auto;
+  margin-top: 100px;
+  justify-content: center;
+  border-bottom: 1px solid lightgrey;
+  width: 80%;
+}
+
+.search-page .search-type span {
+  font-size: 30px;
+  margin: 0 100px;
+  cursor: pointer;
+}
+
+.search-page .search-type span.selected {
+  font-weight: bold;
+  text-decoration: underline;
+}
