--- a/src/App.css
+++ b/src/App.css
@@ -439,3 +439,20 @@ div.preview {
   font-weight: bold;
   text-decoration: underline;
 }
+
+.user-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.user-list .small-acc {
+  color: black;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  align-self: center;
+  justify-self: center;
+  margin: 20px;
+}
