--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,6 @@
   width: 100%;
   height: 100%;
   overflow-y: scroll;
-  overflow-x: hidden;
 }
 
 nav {
@@ -28,6 +27,12 @@ nav {
   background-color: #ffdbfd;
   color: #d126a1;
   margin: 15px 0;
+  transition: background-color 0.3s, transform 0.2s;
+}
+
+.link-icon:hover {
+  transform: scale(1.1, 1.1);
+  background-color: #efcbed;
 }
 
 .search {
@@ -44,11 +49,12 @@ nav {
   width: 20%;
   background-color: white;
   border-radius: 20px;
+  transition: width 0.4s;
 }
 
 .search-field:focus-within,
 .search-field:hover {
-  width: 40%;
+  width: 60%;
 }
 
 .search-field fieldset {
@@ -60,6 +66,11 @@ nav {
   color: black;
   text-decoration: none;
   height: auto;
+  transition: transform 0.3s;
+}
+
+.post-link:hover {
+  transform: scale(1.1, 1.1);
 }
 
 .post {
@@ -101,7 +112,6 @@ nav {
   padding-top: 100px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  overflow: hidden;
   grid-gap: 20px;
   width: 90%;
   margin: 0 auto;
@@ -191,6 +201,12 @@ div.small-avatar {
 .post-content .actions > input {
   all: unset;
   margin-left: 20px;
+  cursor: pointer;
+  transition: transform 0.2s;
+}
+
+.post-content .actions > input:hover {
+  transform: scale(1.1);
 }
 
 .comments {
@@ -253,6 +269,7 @@ div.small-avatar {
 .post-form > input {
   all: unset;
   cursor: pointer;
+  transition: transform 0.2s;
 }
 
 .post-form > input,
@@ -327,6 +344,18 @@ button.logout:hover {
 .account-details .MuiAvatar-root {
   width: 100px;
   height: 100px;
+}
+
+.actions > span:first-child svg {
+  transition: transform 0.2s;
+}
+
+.actions > span:first-child svg:hover {
+  transform: scale(1.3);
+}
+
+.actions > span:first-child svg:active {
+  transform: scale(1.5);
 }
 
 .account .stats {
@@ -464,6 +493,8 @@ div.preview {
 
 .alert {
   position: relative;
+  background-color: #ffdbfd;
+  margin-bottom: 20px;
 }
 
 .alert.new {
@@ -479,13 +510,18 @@ div.preview {
 
 .alert button {
   all: unset;
-  color: red;
+  color: black;
   position: absolute;
   top: 50%;
   left: 95%;
   transform: translate(-50%, -50%);
   cursor: pointer;
-  padding: 20px;
+  transition: transform 0.2s, color 0.2s;
+}
+
+.alert button:hover {
+  color: red;
+  transform: translate(-50%, -50%) scale(1.3);
 }
 
 div.user-avatar {
@@ -510,4 +546,12 @@ div.user-avatar {
   position: relative;
   left: 99%;
   transform: translateX(-50%);
+}
+
+.account .stats a {
+  transition: transform 0.5s;
+}
+
+.account .stats a:hover {
+  transform: rotateZ(360deg);
 }
