--- a/src/App.css
+++ b/src/App.css
@@ -62,7 +62,6 @@ nav {
 }
 
 .post-link {
-  display: inline-block;
   color: black;
   text-decoration: none;
   height: auto;
@@ -79,6 +78,9 @@ nav {
   border-radius: 10px;
   background-color: white;
   width: 100%;
+  height: 100%;
+  position: relative;
+  padding-bottom: 10px;
 }
 
 .post h3 {
@@ -99,6 +101,8 @@ nav {
   display: flex;
   justify-content: space-between;
   margin: 5px 0;
+  position: absolute;
+  bottom: 0;
 }
 
 .post .stats span {
