--- a/src/App.css
+++ b/src/App.css
@@ -80,12 +80,13 @@ nav {
   width: 100%;
   height: 100%;
   position: relative;
-  padding-bottom: 10px;
+  padding-bottom: 12.5px;
 }
 
 .post h3 {
   margin: 2.5px 0;
   margin-left: 5px;
+  overflow-wrap: break-word;
 }
 
 .post img {
@@ -160,6 +161,7 @@ div.small-avatar {
 .post-content h2 {
   border: 1px solid lightgrey;
   padding: 20px;
+  overflow-wrap: break-word;
 }
 
 .post-content .owner {
